test-cases/final-dump/trait_error_abstract_proc_resources.exp
Error detected during type checking of module(s) trait_error_abstract_proc_resources, trait_error_abstract_proc_resources.printable
final-dump/trait_error_abstract_proc_resources.wybe:7:1: Invalid implementation of trait trait_error_abstract_proc_resources.printable for type wybe.int: missing required proc print_value
